--- a/mysite7/src/main/resources/templates/includes/header.html
+++ b/mysite7/src/main/resources/templates/includes/header.html
@@ -1,9 +1,4 @@
-<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c"%>
-<%@ taglib uri="http://java.sun.com/jsp/jstl/fmt" prefix="fmt"%>
-<%@ taglib uri="http://java.sun.com/jsp/jstl/functions" prefix="fn"%>
-<%@ taglib uri="http://www.springframework.org/security/tags" prefix="sec"%>
-<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
-<script src="${pageContext.request.contextPath}/assets/js/jquery/jquery-1.9.0.js"></script>
+<script th:src="@{/assets/js/jquery/jquery-1.9.0.js}"></script>
 <script>
 $(function(){
 	$("#languages a").click(function(event){
@@ -21,31 +16,24 @@ $(function(){
 });
 </script>
 		<div id="header">
-			<h1>
-				<!-- ${sitevo.title } -->
-				${site.title }
-			</h1>
+			<h1 th:text="@{site.title}"></h1>
 			<div id="languages">
-				<c:choose>
-					<c:when test='${language=="en" }'>
-						<a href="" data-lang="ko">KR</a><a href="" data-lang="en" class="active">EN</a>
-					</c:when>
-					<c:otherwise>
-						<a href="" data-lang="ko" class="active">KR</a><a href="" data-lang="en">EN</a>
-					</c:otherwise>
-				</c:choose>
-				
+				<th:block th:if="${language=='en' }">
+					<a href="" data-lang="ko">KR</a><a href="" data-lang="en" class="active">EN</a>
+				</th:block>
+				<th:block th:unless="${language=='en' }">
+					<a href="" data-lang="ko" class="active">KR</a><a href="" data-lang="en">EN</a>
+				</th:block>
 			</div>
 			<ul>
-				<sec:authorize access="!isAuthenticated()">
-					<li><a href="${pageContext.request.contextPath}/user/login">로그인</a><li>
-					<li><a href="${pageContext.request.contextPath}/user/join">회원가입</a><li>
-				</sec:authorize>
-				<sec:authorize access="isAuthenticated()">
-					<sec:authentication property="principal" var="authUser"/> 
-					<li><a href="${pageContext.request.contextPath}/user/update">회원정보수정</a><li>
-					<li><a href="${pageContext.request.contextPath}/user/logout">로그아웃</a><li>
-					<li>${authUser.name}님 안녕하세요~ ^o^</li>
-				</sec:authorize>
+				<th:block sec:authorize="!isAuthenticated()">
+					<li><a th:href="@{/user/login}" th:text="#{header.gnb.login}"></a></li>
+					<li><a th:href="@{/user/join}" th:text="#{header.gnb.join}"></a></li>
+				</th:block>
+				<th:block sec:authorize="isAuthenticated()">
+					<li><a th:href="@{/user/update}" th:text="#{header.gnb.settings}"></a></li>
+					<li><a th:href="@{/user/logout}" th:text="#{header.gnb.logout}"></a></li>
+					<li><span th:text="#{header.gnb.greeting}"></span> <span sec:authentication="principal.name"></span><span th:text="#{header.gnb.user.title}"></span></li>
+				</th:block>
 			</ul>
 		</div>
