--- a/mysite7/src/main/resources/templates/main/index.html
+++ b/mysite7/src/main/resources/templates/main/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<title>mysite</title>
+<title th:text="${@site.title}"></title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <link th:href="@{/assets/css/main.css}" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<div id="container">
-		<!--
-		<c:import url="/WEB-INF/views/includes/header.jsp" /> -->
+		<!--<c:import url="/WEB-INF/views/includes/header.jsp" /> -->
+		<th:block th:include="includes/header"></th:block>
 		<div id="wrapper">
 			<div id="content">
 				<div id="site-introduction">
@@ -25,9 +25,8 @@
 			</div>
 		</div>
 	
-		<!--
-		<c:import url="/WEB-INF/views/includes/navigation.jsp" />
-		<c:import url="/WEB-INF/views/includes/footer.jsp" /> -->
+		<th:block th:include="includes/navigation"></th:block>
+		<th:block th:include="includes/footer"></th:block>
 	</div>
 </body>
 </html>
